# Fitch

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Fitch.sln  README.md  build.sh  build_debug.sh  lodepng.cpp  lodepng.h  main.cpp  main.h  tools.cpp  tools.h
Fitch/: Animation.cs  Block.cs  CREDITS.txt  Camera.cs  ContentPipe.cs  EmptyClass.cs  Fitch.csproj  Game.cs  Input.cs  LICENCE_short.txt  Physics.cs  Player.cs  Powerup.cs  Program.cs  Save.cs  Sound.cs  Sprite.cs  SpriteBatch.cs  Texture2D.cs  World.cs  packages.config
Fitch/Content/: level1.fl  level2.fl  level3.fl
Fitch/Properties/: AssemblyInfo.cs  Resources.Designer.cs
Fitch/Shaders/: test.frag  test.vert
Fitch/publish/Application Files/Fitch_1_2_0_1/: Fitch.application  Fitch.exe.deploy  Fitch.exe.manifest
Fitch/publish/Application Files/Fitch_1_2_0_2/: Fitch.application  Fitch.exe.deploy  Fitch.exe.manifest
game/: Block.cpp  Block.h  PhysicsObject.h  Player.cpp  Player.h
graphics/: Drawable.h  Mesh.cpp  Mesh.h  Rectangle.cpp  Rectangle.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Vertex.cpp
logging/: Logger.cpp  Logger.h
physics/: Physics.cpp  Physics.h  PhysicsBody.cpp  PhysicsBody.h  Rectangle2D.cpp  Rectangle2D.h  RigidBody.cpp  RigidBody.h  StaticBody.cpp  StaticBody.h
shaders/: bvshader.glsl  fshader.glsl  pfshader.glsl  pvshader.glsl  tfshader.glsl  tvshader.glsl  vshader.glsl
